# Mindtools

./: .dockerignore  .gitignore  DevREADME.md  Dockerfile  README.md  bower.json  docker-compose-deploy.yml  docker-compose-dev-deploy.yml  docker-compose-prod-deploy.yml  docker-compose.yml  edit_admin_ips.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
content/: urls.py  views.py  widgets.py
content/templates/admin/: content_widget.html  email_content_widget.html  sms_content_widget.html  text_content_widget.html
events/: admin.py  middleware.py  models.py  signals.py
import_export_huey/: __init__.py  admin.py  admin_actions.py  apps.py  fields.py  model_config.py  tasks.py  utils.py  widgets.py
import_export_huey/migrations/: 0001_initial.py  0002_auto_20190923_1132.py  0003_exportjob.py  0004_exportjob_email_on_completion.py  0005_exportjob_site_of_origin.py  0006_auto_20191125_1236.py  0007_auto_20210210_1831.py  0008_alter_exportjob_id_alter_importjob_id.py  0009_alter_exportjob_options_alter_importjob_options_and_more.py  0010_auto_20231013_0904.py
import_export_huey/models/: __init__.py  exportjob.py  importjob.py
import_export_huey/templates/: custom_ajax_file_input.html
nginx_compose/: nginx.conf  nginx_dev.conf  nginx_prod.conf
plumbing/: urls.py  widgets.py
plumbing/templates/admin/: plumbing_widget.html
serafin/: apps.py  asgi.py  middleware.py  models.py  settings.py  settings_tests.py  urls.py  wsgi.py
setup_scripts/: frontend_setup.sh
staticfiles/css/: main-mobile.css  main-mobile_en.css  main.css  main_en.css
staticfiles/js/: chat.js  serafin.js
system/: admin.py  constants.py  engine.py  expressions.py  forms.py  models.py  resources.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
system/application_services/: __init__.py  program_export.py  program_import.py  program_import_export.py
system/migrations/: 0030_program_default_program_start_time.py
system/templates/: import_text.html
system/templates/admin/: delete_confirmation.html
system/tests/: test_communication.py  test_engine.py
tasker/: admin.py  models.py  tests.py
templates/: base.html  chat.html  modules.html  mytherapist.html  pdf.html  portal.html  sentry.html  sessionnew.html  therapist.html  tools.html
templates/admin/: base.html  base_site.html  custom_version_admin_change_list.html  index.html
templates/registration/: password_change_form.html  password_reset_confirm.html  password_reset_form.html
tokens/: tokens.py
users/: admin.py  forms.py  importexport.py  middleware.py  models.py  urls.py  utils.py  views.py  widgets.py
users/templates/: login.html  login_lock.html
(+18 files in other folders)
